[package]
name = "agent"
version = "0.1.0"
edition = "2021"
authors = ["nthdeg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
openssl = { version = "0.10.35", features = ["vendored"] }
